--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,18 @@
+li {
+    list-style: none;
+}
+
+.header-logo {
+    font-size: 60px;
+    float: left;
+    padding : 2.5px 30px;
+}
+
+.header {
+background-color: #26d0c9;
+color: #fff;
+height: 90px;
+
 .header-list li {
     font-size: 20px;
     float: right;
